--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <div class="container">
                 <h2 class="projects-title">Чем мы занимаемся</h2>
                 <ul class="categories">
-                    <li class="target">
-                        <img src="./images/our-projects/desktop.jpg" alt="Открытый ноутбук" width="370" height="294"/>
+                    <li>
+                        <img src="./images/our-projects/desktop.jpg" alt="Открытый ноутбук" width="370" height="294" class="target"/>
                         <h3 class="project">Десктопные приложения</h3>
                     </li>
                     <li class="target">
