--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <ul class="work-list">
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/site.jpg" alt="Оформление сайта" width="370" height="294">
+                            <img src="./images/portfolio/project-1.jpg" alt="Оформление сайта" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Технокряк</h2>
                                 <p class="work-type">Веб-сайт</p>
@@ -64,7 +64,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/poster.jpg" alt="Постер с баскетболистами" width="370" height="294">
+                            <img src="./images/portfolio/project-2.jpg" alt="Постер с баскетболистами" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="work-type">Дизайн</p>
@@ -73,7 +73,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/seafood.jpg" alt="Лого ресторана" width="370" height="294">
+                            <img src="./images/portfolio/project-3.jpg" alt="Лого ресторана" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Ресторан Seafood</h2>
                                 <p class="work-type">Приложение</p>
@@ -82,7 +82,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/prime.jpg" alt="Наушники" width="370" height="294">
+                            <img src="./images/portfolio/project-4.jpg" alt="Наушники" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Проект Prime</h2>
                                 <p class="work-type">Маркетинг</p>
@@ -91,7 +91,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/boxes.jpg" alt="Картонные коробки" width="370" height="294">
+                            <img src="./images/portfolio/project-5.jpg" alt="Картонные коробки" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Проект Boxes</h2>
                                 <p class="work-type">Приложение</p>
@@ -100,7 +100,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/inspiration.jpg" alt="Монитор" width="370" height="294">
+                            <img src="./images/portfolio/project-6.jpg" alt="Монитор" width="370" height="294">
                             <div class="work-description">
                                 <h2 lang="en" class="list-title">Inspiration has no Borders</h2>
                                 <p class="work-type">Веб-сайт</p>
@@ -109,7 +109,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/limited-edition.jpg" alt="Открытый журнал" width="370" height="294">
+                            <img src="./images/portfolio/project-7.jpg" alt="Открытый журнал" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Издание Limited Edition</h2>
                                 <p class="work-type">Дизайн</p>
@@ -118,7 +118,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/lab.jpg" alt="Бирка для изделия" width="370" height="294">
+                            <img src="./images/portfolio/project-8.jpg" alt="Бирка для изделия" width="370" height="294">
                             <div class="work-description">
                                 <h2 lang="en" class="list-title">Проект LAB</h2>
                                 <p class="work-type">Маркетинг</p>
@@ -127,7 +127,7 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/business.jpg" alt="Открытый ноутбук" width="370" height="294">
+                            <img src="./images/portfolio/project-9.jpg" alt="Открытый ноутбук" width="370" height="294">
                             <div class="work-description">
                                 <h2 class="list-title">Growing Business</h2>
                                 <p class="work-type">Приложение</p>
