--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 <div class="container">
                 <h2 class="projects-title">Чем мы занимаемся</h2>
                 <ul class="categories">
-                    <li>
-                        <img src="./images/our-projects/desktop.jpg" alt="Открытый ноутбук" width="370" height="294" class="target"/>
+                    <li class="target-img">
+                        <img src="./images/our-projects/desktop.jpg" alt="Открытый ноутбук" width="370" height="294"/>
                         <h3 class="project">Десктопные приложения</h3>
                     </li>
-                    <li class="target">
+                    <li class="target-img">
                     <img
                         src="./images/our-projects/mobile.jpg"
                         alt="Мобильный телефон"
@@ -96,7 +96,7 @@
                     />
                     <h3 class="project">Мобильные приложения</h3>
                     </li>
-                    <li class="target">
+                    <li class="target-img">
                     <img
                         src="./images/our-projects/design.jpg"
                         alt="Дисплей с примером дизайна"
