--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,10 @@
                 <ul class="work-list">
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-1.jpg" alt="Оформление сайта" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-1.jpg" alt="Оформление сайта" width="370" height="294"/>
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Технокряк</h2>
                                 <p class="work-type">Веб-сайт</p>
@@ -63,8 +66,11 @@
                         </a>
                     </li>
                     <li class="work-item">
-                        <a href="">
-                            <img src="./images/portfolio/project-2.jpg" alt="Постер с баскетболистами" width="370" height="294">
+                        <a href="" class="project-thumb">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-2.jpg" alt="Постер с баскетболистами" width="370" height="294"/>
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="work-type">Дизайн</p>
@@ -73,7 +79,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-3.jpg" alt="Лого ресторана" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-3.jpg" alt="Лого ресторана" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Ресторан Seafood</h2>
                                 <p class="work-type">Приложение</p>
@@ -82,7 +91,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-4.jpg" alt="Наушники" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-4.jpg" alt="Наушники" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Проект Prime</h2>
                                 <p class="work-type">Маркетинг</p>
@@ -91,7 +103,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-5.jpg" alt="Картонные коробки" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-5.jpg" alt="Картонные коробки" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Проект Boxes</h2>
                                 <p class="work-type">Приложение</p>
@@ -100,7 +115,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-6.jpg" alt="Монитор" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-6.jpg" alt="Монитор" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 lang="en" class="list-title">Inspiration has no Borders</h2>
                                 <p class="work-type">Веб-сайт</p>
@@ -109,7 +127,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-7.jpg" alt="Открытый журнал" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-7.jpg" alt="Открытый журнал" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Издание Limited Edition</h2>
                                 <p class="work-type">Дизайн</p>
@@ -118,7 +139,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-8.jpg" alt="Бирка для изделия" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-8.jpg" alt="Бирка для изделия" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 lang="en" class="list-title">Проект LAB</h2>
                                 <p class="work-type">Маркетинг</p>
@@ -127,7 +151,10 @@
                     </li>
                     <li class="work-item">
                         <a href="">
-                            <img src="./images/portfolio/project-9.jpg" alt="Открытый ноутбук" width="370" height="294">
+                            <div class="project-img">
+                                <img src="./images/portfolio/project-9.jpg" alt="Открытый ноутбук" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="work-description">
                                 <h2 class="list-title">Growing Business</h2>
                                 <p class="work-type">Приложение</p>
