--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="./index.html" lang="en" class="studio-logo">Web <span class="logo">Studio</span></a>
                 <!-- Навигация на другие страницы -->
                 <ul class="nav-bar">
-                    <li><a href="./index.html" class="link">Студия</a></li>
+                    <li><a href="./index.html" class="link current">Студия</a></li>
                     <li><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
                     <li><a href="./contacts.html" target="_blank" class="link">Контакты</a></li>
                 </ul>
@@ -88,22 +88,12 @@
                         <h3 class="project">Десктопные приложения</h3>
                     </li>
                     <li class="target-img">
-                    <img
-                        src="./images/our-projects/mobile.jpg"
-                        alt="Мобильный телефон"
-                        width="370"
-                        height="294"
-                    />
-                    <h3 class="project">Мобильные приложения</h3>
+                        <img src="./images/our-projects/mobile.jpg" alt="Мобильный телефон" width="370" height="294"/>
+                        <h3 class="project">Мобильные приложения</h3>
                     </li>
                     <li class="target-img">
-                    <img
-                        src="./images/our-projects/design.jpg"
-                        alt="Дисплей с примером дизайна"
-                        width="370"
-                        height="294"
-                    />
-                    <h3 class="project">Дизайнерские решения</h3>
+                        <img src="./images/our-projects/design.jpg" alt="Дисплей с примером дизайна" width="370" height="294"/>
+                        <h3 class="project">Дизайнерские решения</h3>
                     </li>
                 </ul>
                 </div>
