--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                 <!-- Навигация на другие страницы -->
                 <ul class="nav-bar">
                     <li><a href="./index.html" class="link">Студия</a></li>
-                    <li><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
+                    <li><a href="./portfolio.html" target="_blank" class="link current">Портфолио</a></li>
                     <li><a href="./contacts.html" target="_blank" class="link">Контакты</a></li>
                 </ul>
                 </nav>
