--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section>
                 <div class="banner">
                 <div class="banner-text-box"><h1 class="banner-text">Эффективные решения для вашего бизнеса</h1></div>
-                <a href="./contacts.html" target="_blank" class="button">Заказать услугу</a>
+                <button type="button" class="order">Заказать услугу</button>
                 </div>
             </section>
 
