--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,8 @@
         <!-- Примеры работ -->
             <div class="container">
                 <ul class="work-list">
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-1.jpg" alt="Оформление сайта" width="370" height="294"/>
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -65,8 +65,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="" class="project-thumb">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-2.jpg" alt="Постер с баскетболистами" width="370" height="294"/>
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -77,8 +77,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-3.jpg" alt="Лого ресторана" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -89,8 +89,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-4.jpg" alt="Наушники" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -101,8 +101,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-5.jpg" alt="Картонные коробки" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -113,8 +113,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-6.jpg" alt="Монитор" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -125,8 +125,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-7.jpg" alt="Открытый журнал" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -137,8 +137,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-8.jpg" alt="Бирка для изделия" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -149,8 +149,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="work-item">
-                        <a href="">
+                    <li>
+                        <a href="" class="work-item">
                             <div class="project-img">
                                 <img src="./images/portfolio/project-9.jpg" alt="Открытый ноутбук" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
